...

    <string name="register_user">Cadastro Usuário</string>
    <string name="save">Salvar</string>
    <string name="atualizar">Atualizar</string>
    <string name="cancel">Cancelar</string>

    <string name="entrar">Entrar</string>
    <string name="recuperar_senha">Recuperar senha</string>

    <string name="alter_senha">Caso altere a senha, ocorrerá logout em sua conta.</string>
    <string name="menu_adicionar">Adicionar</string>
    <string name="menu_adicionar_propriedade">Adicionar uma propriedade</string>
    <string name="menu_adicionar_animal">Adicionar um animal</string>
    <string name="menu_visualizar_animais">Visualizar animais</string>
    <string name="menu_historico">Ver histórico de dados</string>
    <string name="menu_excluir">Excluir</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_relatorio">Relatório</string>

    <string name="link_novo_cadastro">Não é cadastrado? <b>Crie sua conta</b></string>
    <string name="link_esqueceu_senha">Esqueceu sua senha?</string>

...
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
        <item>TODOS</item>
...

    <string name="campo_peso">Peso (kg)</string>
    <string name="campo_natimorto">Natimorto</string>

    <string name="msg_senha_enviada">Senha enviada por e-mail</string>
    <string name="msg_sem_internet">Infelizmente não foi detectada uma conexão com a internet</string>
    <string name="menu_ver_producao_leite">Ver produção de leite</string>
    <string name="menu_ver_prole">Ver prole</string>
    <string name="msg_selecione_propriedade">Por favor, selecione uma propriedade cadastrada.</string>
    <string name="text_floating_propriedade">Propriedade</string>
    <string name="text_floating_proprietarios">Proprietários</string>

    <string name="campo_composto">Nome do Composto</string>
...
